[project]
name = "sirutalib"
version = "1.3.0"
description = "Work with the Romanian settlement database, SIRUTA"
authors = [
    {name = "Andrei Cipu", email = "siruta@strainu.ro"},
]
dependencies = ["setuptools>=80.9.0"]
requires-python = ">=3.9"
readme = "README.md"
license = "BSD-3-Clause"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
